--- a/Big Ideas Final/README
+++ b/Big Ideas Final/README
@@ -1,5 +1,5 @@
 A Readme that contains:
-Team name: 
+Team name: Green Team
 Team members and their email addresses: Shayaan, Nathan - ncg38@pitt.edu, Ryan, David
 Description and links to the datasets used: Playing fields - The most playing fields per neighborhood to show the best neighborhood for that. https://data.wprdc.org/dataset/playing-fields
 
