--- a/Big Ideas Final/README
+++ b/Big Ideas Final/README
@@ -1,6 +1,6 @@
 A Readme that contains:
 Team name: Green Team
-Team members and their email addresses: Shayaan - shm363@pitt.edu, Nathan - ncg38@pitt.edu, Ryan - rop129@pitt.edu, David
+Team members and their email addresses: Shayaan - shm363@pitt.edu, Nathan - ncg38@pitt.edu, Ryan - rop129@pitt.edu, David - dba11@pitt.edu
 Description and links to the datasets used: Playing fields - This dataset contains the names and locations of playing fields. https://data.wprdc.org/dataset/playing-fields
 
 A one-sentence overview of your repository, meant for someone who is not familiar with the project: This project was made to find the best neighborhood for greenspaces.
