--- a/Big Ideas Final/README
+++ b/Big Ideas Final/README
@@ -5,5 +5,5 @@ Team members and their email addresses: Shayaan - shm363@pitt.edu, Nathan - ncg3
 Description and links to the datasets used: 
 Playing fields - This dataset contains the names and locations of playing fields. https://data.wprdc.org/dataset/playing-fields
 Trees - This dataset includes every public tree in Pittsburgh and several details about them. https://data.wprdc.org/dataset/city-trees
-
+Parks - This dataset contains every park in Pittsburgh and details about said parks. https://data.wprdc.org/dataset/parks1
 A one-sentence overview of your repository, meant for someone who is not familiar with the project: This project was made to find the best neighborhood for greenspaces.
