--- a/Big Ideas Final/Combined.ipynb
+++ b/Big Ideas Final/Combined.ipynb
@@ -583,7 +583,7 @@
    "id": "dbea8e72-e179-4127-a349-7becfe53eeec",
    "metadata": {},
    "source": [
-    "![image.png](attachment:fbc9d007-5d46-40ef-a98e-dd0d5c068a3b.png)"
+    "![map of park divisions](image.png \"maps\")"
    ]
   },
   {
